Changes in the build and setup file