@@ -1,127 +1,51 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project name="Run WindowTester Pro UI tests" default="runWtpTestsWithAnt" basedir=".">
-  
-  <import file="setup.xml"/>
-  
-  <property name="eclipse-test-version" value="3.7.2"/>
-  <property name="eclipse-test-plugin.version" value="org.eclipse.test_3.3.100"/>
-  <property name="org.eclipse.test" value="3.3.100"/>
-  <property name="eclipse-test-home" value="${basedir}/eclipse-test"/>
-  <property name="eclipse-home" value="${eclipse-test-home}"/>
+<?xml version="1.0" encoding="UTF-8" ?>
+<project name="testsuite" default="run" basedir=".">
+    <property name="eclipse-home" value="E:\CEN_TEST\Workbench_8.4.1_Test\eclipse" />
+    <property name="plugin-under-test" value="com.GS.autoBT.PachInstallation" />
+    <property name="plugin-name" value="com.GS.autoBT.PachInstallation" />
+	<property name="test-classname"   value="com.gs.NewActivityWizard.Reg_1246"/>
+	<property name="all.buildId" value="2.0.5.20111003_1754-3676ac8-dev-e36"/>
+	<property name="build.base"  value="./"/>
+	<property name="results.dir" value="E:\CEN_TEST\result"/>
+    <property name="library-file" value="${eclipse-home}/plugins/org.eclipse.swtbot.eclipse.junit4.headless_${all.buildId}/library.xml"/>
+	<target name="init">
+		<tstamp />
+	<!--	<delete>
+			<fileset dir="${eclipse-home}" includes="org*.xml" />
+			<fileset dir="${eclipse-home}/workspace" includes="*.*"/>
+			<fileset dir="${eclipse-home}/results" includes="*.*"/>
+		</delete>
+		<mkdir dir="${results.dir}/${plugin-name}/coverage"></mkdir>
+		-->
+	</target>
 
-  <target name="runWtpTestsWithAnt">
-    <antcall target="prepare"/>
-    <antcall target="test"/>
-    <antcall target="createReport"/>
-  </target>
+    <target name="suite">
+    	<property name="temp-workspace" value="E:\CEN_TEST\Workbench_8.4.1_Test\eclipse\junit-workspace" />
+       <!-- <delete dir="${temp-workspace}" quiet="true" /> -->
 
-  <target name="prepare">
-    <delete dir="${eclipse-test-home}"/>		
-    
-    <!-- Extract Eclipse RCP to Eclipse Test Home dir -->
-    <antcall target="unzipEclipse">
-      <param name="targetDir" value="${eclipse-test-home}"/>
-    </antcall>
-    <antcall target="untarEclipse">
-      <param name="targetDir" value="${eclipse-test-home}"/>
-    </antcall>
-    
-    <!-- Copy Window Tester Pro plugins and features to Eclipse Test home dir-->
-    <copy todir="${eclipse-test-home}">
-      <fileset dir="${wtpRepoRunDir}">
-	<include name="**/features/"/>
-	<include name="**/plugins/"/>
-      </fileset>
-    </copy>
+    	<!-- remove junit3 fragment -->
+    	<delete dir="${eclipse-home}/plugins/org.eclipse.swtbot.eclipse.junit3.headless_${all.buildId}" />
+    	<delete dir="${eclipse-home}/plugins" includes="org.eclipse.swtbot.ant.optional.junit3_${all.buildId}.jar"/>
 
-    <!-- Copy Eclipse Test Framework plugins and features to Eclipse Test home dir-->
-    <copy todir="${eclipse-test-home}">
-      <fileset dir="${etfRunDir}">
-	<include name="**/features/"/>
-	<include name="**/plugins/"/>
-      </fileset>
-    </copy>
-
-    <!-- Patch library.xml file (wrong path to JUNIT.XSL file) -->
-    <copy todir="${eclipse-test-home}/plugins/${eclipse-test-plugin.version}" overwrite="true">
-      <fileset dir="${basedir}">
-	<include name="library.xml.patched"/>
-      </fileset>
-      <globmapper from="*.xml.patched" to="*.xml"/>
-    </copy>
-
-    <!-- Copy SDK Examples plugins and features to Eclipse Test home dir-->
-    <copy todir="${eclipse-test-home}">
-      <fileset dir="${sdkExamplesRunDir}">
-	<include name="**/features/"/>
-	<include name="**/plugins/"/>
-      </fileset>
-    </copy>
-
-    <!-- Copy plugin containing the UI tests to Eclipse Test home dir -->
-    <copy todir="${eclipse-test-home}/plugins">
-      <fileset dir="${basedir}">
-	<include name="com.windowtester.example.swtcontrols_test_*.jar"/>
-      </fileset>
-    </copy>
-  </target>
+    	<ant target="swtbot-test" antfile="${library-file}" dir="${eclipse-home}">
+            <property name="data-dir" value="${temp-workspace}" />
+            <property name="testApplication" value="org.eclipse.ui.ide.workbench" />
+            <property name="plugin-name" value="${plugin-name}" />
+            <property name="classname" value="${test-classname}" />
+			<property name="os" value="win32"/>
+			<property name="ws" value="win32"/>
+			<property name="arch" value="x86"/>			
+            <property name="vmargs" value=" -Xms128M -Xmx368M -XX:MaxPermSize=256M " />
+        </ant>
+    </target>
 
 
-  <!-- Run UI tests (one Eclipse instance for each test) -->
-  <target name="test">
-    <property name="pluginName" value="com.windowtester.example.swtcontrols_test" />
-    <antcall target="abstractTestClean">
-	<param name="testClassName" value="com.windowtester.example.swtcontrols.test.SWTControlsViewTest" />
-    </antcall>
-    <!-- more test cases should be inserted here -->
-    <!--
-    <antcall target="abstractTestClean">
-	<param name="testClassName" value="com.windowtester.example.swtcontrols.test.SWTControlsViewTest2" />
-    </antcall>
-    -->
-  </target>
-
-  <!-- parameters according to the platform -->
-  <target name="setPlatformWin" if="${windows}">
-      <property name="baseos" value="win32"/>
-      <property name="basews" value="win32"/>
-      <property name="basearch" value="x86"/>
-  </target>
-
-  <target name="setPlatformLinux" unless="${windows}">
-      <property name="baseos" value="linux"/>
-      <property name="basews" value="gtk"/>
-      <property name="basearch" value="x86"/>
-  </target>
-  
-  <!-- abstract test target -->
-  <target name="abstractTestClean" depends="setPlatformWin,setPlatformLinux">
-        <property name="eclipse-test-library-file" value="${eclipse-test-home}/plugins/${eclipse-test-plugin.version}/library.xml"/>
-	<ant target="ui-test" antfile="${eclipse-test-library-file}" dir="${eclipse-test-home}">
-		<property name="os" value="${baseos}"/>
-		<property name="ws" value="${basews}"/>
-		<property name="arch" value="${basearch}"/>
-		<property name="data-dir" value="${eclipse-test-home}/junit-workspace -clean" />
-		<property name="plugin-name" value="${pluginName}" />
-		<property name="classname" value="${testClassName}" />
-	</ant>
-  </target>
-  
-  <target name="createReport">
-    <!-- surrounding <testsuites> tags do not work with Ant junitreport task !?, therefore they need to be removed -->
-    <replaceregexp file="${eclipse-test-home}/results/com.windowtester.example.swtcontrols.test.SWTControlsViewTest.xml"
-               match="&lt;.?testsuites&gt;"
-               replace=""
-               byline="true"
-    />
-    
-      <mkdir dir="${eclipse-test-home}/report/html"/>
-      <junitreport todir="${eclipse-test-home}/report">
-	<fileset dir="${eclipse-test-home}/results">
-	  <include name="*.xml"/>
-	</fileset>
-	<report format="noframes" todir="${eclipse-test-home}/report/html"/>
-      </junitreport>
-  </target>
+	<target name="run" depends="init, suite">
+        <ant target="collect" antfile="${library-file}" dir="${eclipse-home}">
+            <property name="includes" value="*.xml" />
+            <property name="output-file" value="${plugin-name}.xml" />
+        </ant>
+    </target>
 
 </project>
+
